<?xml version="1.0" encoding="utf-8"?>

<!--
 * mergeprompt.xml
 *
 * Copyright (C) 2009 Tim Marston <edam@waxworlds.org>
 *
 * This file is part of the Import Contacts program (hereafter referred
 * to as "this program"). For more information, see
 * http://www.waxworlds.org/edam/software/android/import-contacts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingLeft="20dp" android:paddingRight="20dp">

	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mergeprompt_help" />
	<TextView android:layout_height="wrap_content" android:id="@+id/mergeprompt_name" android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent"/>
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/merge_keep" android:text="@string/merge_keep"/>
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/merge_merge" android:id="@+id/merge_merge" />
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/merge_overwrite" android:id="@+id/merge_overwrite" />
	<CheckBox android:id="@+id/mergeprompt_always" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/mergeprompt_always" />
	<View android:layout_width="fill_parent" android:background="@android:drawable/divider_horizontal_dark" android:layout_marginBottom="10dip" android:layout_height="1dip"/>
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/abort" android:id="@+id/abort" />

</LinearLayout>
