<?xml version="1.0" encoding="utf-8"?>

<!--
 * doit.xml
 *
 * Copyright (C) 2009 Tim Marston <edam@waxworlds.org>
 *
 * This file is part of the Import Contacts program (hereafter referred
 * to as "this program"). For more information, see
 * http://www.waxworlds.org/edam/software/android/import-contacts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

	<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" >
		<LinearLayout android:layout_height="fill_parent" android:orientation="vertical" android:layout_width="fill_parent">

			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/doit_title" android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp"/>

			<LinearLayout android:id="@+id/doit_page_1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">

				<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/doit_ready" />

			</LinearLayout>

			<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/doit_page_2" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">

				<ProgressBar android:id="@+id/doit_progress" style="?android:attr/progressBarStyleHorizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" />
				<TextView android:id="@+id/doit_percentage" android:layout_below="@id/doit_progress" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
				<TextView android:id="@+id/doit_outof" android:layout_below="@id/doit_progress" android:layout_alignRight="@id/doit_progress" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

				<LinearLayout android:layout_below="@id/doit_percentage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" />

					<TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
							<TextView android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/doit_creates" />
							<TextView android:id="@+id/doit_creates" android:layout_width="wrap_content" android:layout_height="wrap_content" />
						</TableRow>
						<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
							<TextView android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/doit_overwrites" />
							<TextView android:id="@+id/doit_overwrites" android:layout_width="wrap_content" android:layout_height="wrap_content" />
						</TableRow>
						<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
							<TextView android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/doit_merges" />
							<TextView android:id="@+id/doit_merges" android:layout_width="wrap_content" android:layout_height="wrap_content" />
						</TableRow>
						<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
							<TextView android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/doit_skips" />
							<TextView android:id="@+id/doit_skips" android:layout_width="wrap_content" android:layout_height="wrap_content" />
						</TableRow>
					</TableLayout>

					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" />

					<LinearLayout android:id="@+id/doit_abort_disp" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:weightSum="3">
						<Button android:text="@string/abort" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/abort" />
					</LinearLayout>

					<TextView android:id="@+id/doit_alldone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/doit_alldone" android:gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:paddingBottom="10dp" android:visibility="gone" />
					<TextView android:id="@+id/doit_aborted" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/doit_aborted" android:gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:paddingBottom="10dp" android:visibility="gone" />

				</LinearLayout>

			</RelativeLayout>

		</LinearLayout>
	</ScrollView>

	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="right" android:background="@android:drawable/bottom_bar" android:weightSum="3">
		<Button android:id="@+id/back" android:text="@string/back" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:enabled="false"/>
		<Button android:id="@+id/next" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:enabled="false" android:text="@string/next"/>
	</LinearLayout>

</LinearLayout>
